# GloomEngine

./: .directory  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
CMake/: Documentation.cmake
Projects/: Projects.pro
Projects/GloomEngine/: GloomEngine.pro
Projects/GloomEngine/include/Core/: Config.h.cmake  Factory.h  GloomEngine.h  GloomEngineConfig.h  GlowEngine.h  Logger.h  ResourcePaths.h  TypeTraits.h  Types.h
Projects/GloomEngine/include/Renderer/: Renderer.h  Window.h
Projects/GloomEngine/src/Core/: GloomEngine.cpp  GloomEngineConfig.cpp  GlowEngine.cpp  Logger.cpp
Projects/GloomEngine/src/Renderer/: Renderer.cpp  Window.cpp
Projects/TestingGrounds/: .directory  TestingGrounds.pro
Projects/TestingGrounds/include/: Game.h
Projects/TestingGrounds/src/: Game.cpp  main.cpp
Resources/Configs/: settings.ini
Resources/Meshes/: UVSphere.x
Test/: CMakeLists.txt
Test/src/: main.cpp
build-Projects-Desktop-Debug/GloomEngine/: Makefile
build-Projects-Desktop-Debug/TestingGrounds/: LogFile.txt  Makefile  TestingGrounds
builds/build-Projects-Desktop-Debug/: Makefile
builds/build-Projects-Desktop-Debug/GloomEngine/: Makefile
builds/build-Projects-Desktop-Debug/TestingGrounds/: Makefile  TestingGrounds
